--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -6,7 +6,7 @@
 
 
 
-{% if site.owner.Title %}<p style="text-indent:0;margin-top:1.5em;"><a href="{{ site.owner.Title }}"><img src="{{ site.url }}/images/logo/title.png" width="15" height="15"></i>{{ site.owner.Title }}</a></p>{% endif %}
+{% if site.owner.Title %}<p style="text-indent:0;margin-top:1.5em;"><a href="{{ site.owner.Institute }}"><img src="{{ site.url }}/images/logo/title.png" width="15" height="15"></i>{{ site.owner.Title }}</a></p>{% endif %}
 
 {% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><img src="{{ site.url }}/images/logo/email.png" width="15" height="15"></i>{{ site.owner.email }}</a></p>{% endif %}
 
