--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -8,11 +8,15 @@
 
 {% if site.owner.Institute%}<p style="text-indent:0;"><a href="{{ site.owner.Institute }}"><img src="{{ site.url }}/images/logo/hdu.png" width="15" height="15"></i>Hangzhou Dianzi University</a></p>{% endif %}
 
-{% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><img src="{{ site.url }}/images/logo/email.png" width="15" height="15"></i>{{ site.owner.email }}</a></p>{% endif %}
-
 {% if site.owner.github %}<p style="text-indent:0;"><a href="https://github.com/{{ site.owner.github }}"><img src="{{ site.url }}/images/logo/git.png" width="15" height="15"></i> github</a></p>{% endif %}
 
-{% if site.owner.scholar%}<p style="text-indent:0;"><a href="{{ site.owner.scholar}}"><img src="{{ site.url }}/images/logo/scholor.png" width="15" height="15"></i> google scholar</a></p>{% endif %}
+{% if site.owner.scholar%}<p style="text-indent:0;"><a href="{{ site.owner.scholar}}"><img src="{{ site.url }}/images/logo/scholor.png" width="15" height="15"></i> Google Scholar</a></p>{% endif %}
+
+{% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><img src="{{ site.url }}/images/logo/email.png" width="15" height="15"></i>{{ site.owner.email }}</a></p>{% endif %}
+
+
+
+
 
 
 
