--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -12,7 +12,7 @@
 
 {% if site.owner.scholar%}<p style="text-indent:0;"><a href="{{ site.owner.scholar}}"><img src="{{ site.url }}/images/logo/scholor.png" width="15" height="15"></i> Google Scholar</a></p>{% endif %}
 
-{% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><img src="{{ site.url }}/images/logo/email.png" width="15" height="15"></i>{{ site.owner.email }}</a></p>{% endif %}
+{% if site.owner.email %}<p style="text-indent:0;"><img src="{{ site.url }}/images/logo/email.png" width="15" height="15"></i>{{ site.owner.email }}</a></p>{% endif %}
 
 
 
