--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -4,7 +4,7 @@
 
 <p>{{ site.owner.bio }}</p>
 
-{% if site.owner.Title %}<p style="text-indent:0;margin-top:1.5em;"><a href="{{ site.owner.Institute }}"><img src="{{ site.url }}/images/logo/title.png" width="15" height="15"></i>Associate Professor</a></p>{% endif %}
+{% if site.owner.Title %}<p style="text-indent:0;margin-top:1.5em;"><a href="{{ site.owner.Title }}"><img src="{{ site.url }}/images/logo/title.png" width="15" height="15"></i>Associate Professor</a></p>{% endif %}
 
 {% if site.owner.Institute%}<p style="text-indent:0;"><a href="{{ site.owner.Institute }}"><img src="{{ site.url }}/images/logo/hdu.png" width="15" height="15"></i>Hangzhou Dianzi University</a></p>{% endif %}
 
