--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -6,7 +6,7 @@
 
 {% if site.owner.Title %}<p style="text-indent:0;margin-top:1.5em;"><a href="https://auto.hdu.edu.cn/2020/0714/c3803a110745/page.htm"><img src="{{ site.url }}/images/logo/title.png" width="15" height="15"></i>{{ site.owner.Title }}</a></p>{% endif %}
 
-{% if site.owner.Institute%}<p style="text-indent:0;"><a href="https://auto.hdu.edu.cn/main.htm"><img src="{{ site.url }}/images/logo/hdu.png" width="15" height="15"></i>{{ site.owner.Institute }}</a></p>{% endif %}
+{% if site.owner.Institute%}<p style="text-indent:0;"><a href="https://www.hdu.edu.cn/main.htm"><img src="{{ site.url }}/images/logo/hdu.png" width="15" height="15"></i>{{ site.owner.Institute }}</a></p>{% endif %}
 
 {% if site.owner.github %}<p style="text-indent:0;"><a href="https://github.com/{{ site.owner.github }}"><img src="{{ site.url }}/images/logo/git.png" width="15" height="15"></i> github</a></p>{% endif %}
 
