--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -8,7 +8,7 @@
 
 {% if site.owner.Institute%}<p style="text-indent:0;"><a href="https://www.hdu.edu.cn/main.htm"><img src="{{ site.url }}/images/logo/hdu.png" width="15" height="15"></i>{{ site.owner.Institute }}</a></p>{% endif %}
 
-{% if site.owner.github %}<p style="text-indent:0;"><a href="https://github.com/{{ site.owner.github }}"><img src="{{ site.url }}/images/logo/git.png" width="15" height="15"></i> github</a></p>{% endif %}
+{% if site.owner.github %}<p style="text-indent:0;"><a href="https://github.com/{{ site.owner.github }}"><img src="{{ site.url }}/images/logo/git.png" width="15" height="15"></i> github-wennboo</a></p>{% endif %}
 
 {% if site.owner.scholar%}<p style="text-indent:0;"><a href="{{ site.owner.scholar}}"><img src="{{ site.url }}/images/logo/scholor.png" width="15" height="15"></i> Google Scholar</a></p>{% endif %}
 
